--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     path: packages/user_repository/
   stock_repository:
     path: packages/stock_repository/
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
 
